# SWU-AI-HELPER

./: README.md
专业必修课/: README.md
专业必修课/1.数据结构/实验/experiements/Book-Management-System/: #Enter_window.glade#  CMakeLists.txt  README.md  main.c  文本文件
专业必修课/1.数据结构/实验/experiements/Book-Management-System/Data/: administrator_data.txt  book.txt  borrow.txt  import_book_data.txt  import_reader_data.txt  readers.txt
专业必修课/1.数据结构/实验/experiements/Book-Management-System/headers/: Add_window.h  Enter_window.h  View_window.h  borrow_window.h  common.h  data_operations.h  login_window.h  mainWindow.h  search_window.h  user_borrow_window.h  user_person_window.h  user_return_window.h  user_window.h  view_readers_window.h
专业必修课/1.数据结构/实验/experiements/Book-Management-System/interface/: #Enter_window.glade#  Enter_window.glade  Login_window.glade  Login_window.glade~  Main_window.glade~  View_window.glade  View_window.glade~  add_window.glade~  borrow_window.glade  borrow_window.glade~  change_window.glade  change_window.glade~  register_window.glade  search_window.glade  search_window.glade~  user_borrow_window.glade  user_borrow_window.glade~  user_person_window.glade  user_person_window.glade~  user_return_window.glade~  user_window.glade  user_window.glade~  view_reader_window.glade
专业必修课/1.数据结构/实验/experiements/Book-Management-System/sources/: Add_window.c  Enter_window.c  View_window.c  borrow_window.c  common.c  data_operations.c  login_window.c  mainWindow.c  search_window.c  user_borrow_window.c  user_person_window.c  user_return_window.c  user_window.c  view_readers_window.c
专业必修课/1.数据结构/实验/experiements/Huffman/: CMakeLists.txt  Decode.c  Encode.c  Enter_window.glade~  README.md  decode_window.glade  encode_window.glade  encode_window.glade~  huffman.h  main  main.c  main_window.c  main_window.glade  main_window.h
专业必修课/1.数据结构/实验/experiements/Huffman/example/: decode_test1.txt  decode_test2.txt  encode_input2.txt
专业必修课/1.数据结构/实验/experiements/Traffic-Information-System/: CMakeLists.txt  README.md  main.c
专业必修课/1.数据结构/实验/experiements/Traffic-Information-System/data/: Flight.txt  Train.txt  time.txt
专业必修课/1.数据结构/实验/experiements/Traffic-Information-System/header/: common.h  enter_window.h  main_window.h  plane_window.h  train_window.h
专业必修课/1.数据结构/实验/experiements/Traffic-Information-System/interface/: enter_window.glade  enter_window.glade~  main_window.glade  main_window.glade~  plane_window.glade  plane_window.glade~  train_window.glade  train_window.glade~
专业选修课/: README.md
(+2373 files in other folders)
